--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ on:
 jobs:
 
   build:
-    name: "Build and run tests"
+    name: "Build & Test"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
