--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,18 +12,10 @@ on:
 jobs:
 
   build:
-    name: "Build & Test"
-    runs-on: ubuntu-latest
+    name: "Build Docker Image"
+    runs-on: debian-bullseye
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24'
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+      - name: Build and run unit tests in docker image
+        run: docker build . -t gotodosrv
